Fix z-index

--- a/blocks/fixed-submenu/fixed-submenu.css
+++ b/blocks/fixed-submenu/fixed-submenu.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 9001;
+    z-index: 2000;
     overflow-y: auto;
   }
 }
