--- a/blocks/popup-write-us/popup-write-us.css
+++ b/blocks/popup-write-us/popup-write-us.css
@@ -11,4 +11,5 @@
   left: 0;
   background-color: rgb(0 0 0 / 70%);
   transition: visibility 0.2s, opacity 0.2s linear;
+  z-index: 2000;
 }
